--- a/site/package.json
+++ b/site/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "nodemonConfig": { "ext": "(js,mjs)" }, 
+  
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
