--- a/site/package.json
+++ b/site/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.13",
     "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "sweetalert2": "^11.1.9"
   }
 }
